083 ==> 358913 - Using Versionning, after returning from edit mode wrong image is selected, image itself is not updated [patch].
084 ==> 358144 - Moving images with special characters in the file name does not work.
085 ==> 359196 - Digikam segfaults when tagging a face.
086 ==> 358081 - Tags Manager - selecting tags from tree-view do not focus tags title field in right sidebar.
087 ==> 234546 - Preview fails for some images [patch].
088 ==> 357224 - Add ability to change icon theme.
089 ==> 359386 - Import from SD forgets downloaded images, but remembers marked as downloaded.
090 ==> 359429 - Image history: original image's entry contains markup.
091 ==> 355836 - Aspect ratio incorrect.
092 ==> 359608 - Digikam does not decode 16 bit grayscale jp2.
093 ==> 276050 - Setting "string comparison type" is not evaluated in icon-view.
094 ==> 351433 - pto2mk not found with Hugin 2015.0.
095 ==> 325830 - Panorama Stitcher returns an error after pre-processing, as a result of attempting to invoke Hugin commands.
096 ==> 359107 - 5 beta 3: panorama tools does not work with latest Hugin PanoTool (2015)
097 ==> 359658 - Compilation of preprocesstask.cpp fails if QT_NO_CAST_FROM_ASCII is defined.
098 ==> 359116 - Video preview not scaling and slider not working.
099 ==> 359897 - Compilation failure - conflicting return type decodeRawImage().
100 ==> 181708 - HUB : add fast tagging feature that only write to database.
101 ==> 227814 - HUB : new option to synchronize immediately files metadata or when application is closed.
102 ==> 265880 - HUB : extend metadata configuration panel to improve metadata handling while importing from file to database (and vis-versa).
103 ==> 244224 - Ignore case when importing tags from metadata.
104 ==> 359963 - In the Albums treeview, clicking an album which has a sub-album does not show its thumbnails.
105 ==> 359967 - Edit slider values as text.
106 ==> 359966 - Clicking and holding a spinbox arrow doesn't keep increasing the value.
107 ==> 